create and delete photostories in web-client
