# photostorybook-webclient/src/main/java/org/jhoffmann/photostorybookwebclient/controllers/PhotostoryController.java
@@ -2,11 +2,17 @@ package org.jhoffmann.photostorybookwebclient.controllers;
 
 import lombok.extern.slf4j.Slf4j;
 import org.jhoffmann.photostorybookwebclient.services.PhotostoryRestService;
+import org.jhoffmann.photostorybookwebclient.util.NewPhotostoryForm;
+import org.openapitools.client.model.AddPhotostoryRequest;
 import org.openapitools.client.model.PhotostoryListResponse;
-import org.springframework.http.ResponseEntity;
+import org.openapitools.client.model.PhotostoryResponse;
 import org.springframework.stereotype.Controller;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.ui.Model;
+import org.springframework.web.bind.annotation.*;
+
+import javax.validation.Valid;
+import java.util.List;
+import java.util.UUID;
 
 @Slf4j
 @Controller
@@ -19,13 +25,49 @@ public class PhotostoryController {
         this.photostoryRestService = photostoryRestService;
     }
 
+    @ModelAttribute( name = "photostoryList")
+    public List<PhotostoryResponse> createPhotostoryList() {
+        PhotostoryListResponse listResponse = photostoryRestService.getPhotostories();
+        return listResponse.getPhotostories();
+    }
+
     @GetMapping
-    public String getPhotostories() {
+    public String getPhotostories(Model model) {
         log.info("PhotostoryController: getPhotostories");
 
-        PhotostoryListResponse response = photostoryRestService.getPhotostories();
-        log.info("PhotostoryController: getPhotostories: " + response.toString());
+        PhotostoryListResponse responseList = photostoryRestService.getPhotostories();
+        log.info("PhotostoryController: getPhotostories: " + responseList.toString());
+        List<PhotostoryResponse> photostories = responseList.getPhotostories();
 
         return "photostories";
+    }
+
+    @GetMapping("/create")
+    public String getNewPhotostoryForm() {
+        return "newphotostory";
+
+    }
+
+    @PostMapping("/create")
+    public String processRegistration(@Valid @ModelAttribute("createStoryForm") NewPhotostoryForm form) {
+        log.info("CreatePhotostoryController: processRegistration " + form.toString());
+        AddPhotostoryRequest addPhotostoryRequest = new AddPhotostoryRequest();
+        addPhotostoryRequest.setStoryTitle(form.getStoryTitle());
+        PhotostoryResponse response = photostoryRestService.addPhotostory(addPhotostoryRequest);
+        return "redirect:/photostories";
+    }
+
+    @PostMapping("/delete/{storyid}")
+    public String deletePhotostory(@PathVariable String storyid) {
+        log.info("PhotostoryController: deletePhotostory with id " + storyid);
+        photostoryRestService.deletePhotostory(UUID.fromString(storyid));
+        return "redirect:/photostories";
+    }
+
+    @GetMapping("/view/{storyid}")
+    public String viewPhotostory(Model model, @PathVariable String storyid) {
+        log.info("PhotostoryController: viewPhotostory with id " + storyid);
+
+        return "photostory_details";
     }
 }
